Bug 65809 - Sidama Locale Sort Order is not Specified Properly
Summary: Sidama Locale Sort Order is not Specified Properly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Localization (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Andras Timar
URL:
Whiteboard: target:4.2.0 target:4.1.0.1
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-16 08:56 UTC by Tadele Assefa
Modified: 2013-11-21 16:17 UTC (History)
0 users

See Also:
Crash report or crash signature:
Regression By:


Attachments
sid_ET locale with corrected sort order at LC_INDEX node (15.25 KB, text/xml)
2013-06-16 08:56 UTC, Tadele Assefa
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tadele Assefa 2013-06-16 08:56:54 UTC
Created attachment 80891 [details]
sid_ET locale with corrected sort order at LC_INDEX node

When I originally submit the locale for Sidama Language, I did not properly specify the additiona double consonant alphabets.
Comment 1 Commit Notification 2013-06-17 08:13:54 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8a9a65006597939b86942bf9194a98eae9d73481

fdo#65809 Sidama (sit-ET) index sorting



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2013-06-17 09:52:24 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fb4542f3427c0b37463c5fa6bb5602ce423510d9

fdo#65809 Sidama (sit-ET) collation data



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2013-06-17 12:36:33 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a5cdb78d797997c3b6f89b5d344d3a56d6d36348&h=libreoffice-4-1

fdo#65809 Sidama (sit-ET) index sorting and collation data


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.