fdo#65809 Sidama (sit-ET) collation data

Change-Id: Icc68dcc44678f4151ff5d4a25dd8868218363341